# routes/index.js
@@ -3,6 +3,7 @@ const router = express.Router()
 const apiRouter = express.Router()
 
 const comicRoutes = require('./comic-routes.js') // HOT
+const heroRoutes = require('./hero-routes.js')
 const userRoutes = require('./user-routes.js')
 const authRoutes = require('./auth-routes.js')
 const swaggerUi = require('swagger-ui-express')
@@ -12,6 +13,7 @@ const swaggerDocument = require('../docs/openapi.json')
 router.use('/api', apiRouter)
 
 apiRouter.use('/comics', comicRoutes)
+apiRouter.use('/hero', heroRoutes)
 apiRouter.use('/users', userRoutes)
 apiRouter.use('/auth', authRoutes)
 apiRouter.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
